@@ -4,21 +4,28 @@
 #If Platform_name is not specified then the hostname of the target is taken
 Platform_name:
 ip:
-port:
+port:22
 user:
 password:
+#If not sure, please keep this option as empty
 target_ip_10g:
 
 [TestNode]
 ip:
-port:
+port:22
 user:
 password:
+#If not sure, please keep this option as empty
 TestNode_ip_10g:
 # SSH implementation used by server (ssh or paramiko)
 ssh_engine: raw_ssh
 # enable OpenSSH connection sharing. Only useful if engine_ssh is 'raw_ssh'
 enable_master_ssh: True
+
+[Caliperweb]
+#by default, only push test data to localhost, 127.0.0.1:8000
+server_num:
+server_ip1:
 
 #All the ipes to be confiured before setting that here. 
 # command used for rebooting the client board
@@ -35,6 +42,4 @@ port:
 user:
 password:
 
-[Caliperweb]
-server_num:
-server_ip1:
+
